--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -151,7 +151,7 @@
         width: 55px;
     }
     .hero-latest-btn{
-        width: 200px;
+        width: 20 0px;
         height: 45px;
         font-size: 14px;
     }
